chore: drop v1 filedrop handling
We have proper support for v2 and its only used by the webui anyways.
So we drop v1 legacy version.
